# template-gallery-spike

./: .algokit.toml  LICENSE  Makefile  README.md  astro.config.mjs  dApp-basic.code-workspace  package.json  pyproject.toml
.algokit/: .copier-answers.yml
.github/workflows/: create-example-branches.yml  publish-demo-sites.yml  run-test.yml  run-tests.yml
app/: package-lock.json  package.json
app/src/: data.ts
app/src/components/: ExampleCard.astro
app/src/layouts/: Layout.astro
app/src/pages/: [id].astro  index.astro
app/src/styles/: global.css
app/src/types/: example.ts
examples/: examples.yml  index.html
examples/frontend-example-1-astro/: README.md  astro.config.mjs  package-lock.json  package.json
examples/frontend-example-1-react/: README.md  package-lock.json  package.json  vite.config.ts
examples/hello-world-python-smart-contract/: .algokit.toml  README.md  pyproject.toml
examples/hello-world-python-smart-contract/.algokit/: .copier-answers.yml
examples/hello-world-python-smart-contract/tests/: test_contract.py  test_hello_world.py
examples/hello-world-typescript-smart-contract/: package.json  vitest.config.mts
examples/hello-world-typescript-smart-contract/.algokit/: .copier-answers.yml
examples/hello-world-typescript-smart-contract/tests/: example.test.ts
examples/tictactoe-smart-contract/: .algokit.toml  README.md  pyproject.toml
examples/tictactoe-smart-contract/.algokit/: .copier-answers.yml
examples/typescript-smart-contract/: README.md
examples/voting-smart-contract/: package.json
examples/voting-smart-contract/.algokit/: .copier-answers.yml
projects/dApp-basic-contracts/: .algokit.toml
projects/dApp-basic-contracts/tests/: test_contract.py
projects/dApp-basic-frontend/: package.json
scripts/: copy_templates.py  copy_templates.sh  create_examples.py  merge_dependencies.py  merge_dirs.py  validate_configuration.py
src/pages/: index.astro
src/tests/: example.spec.ts
templates/: templates.yaml
templates/astro-ts/: copier.yml
templates/astro-ts/template_content/: package-lock.json
templates/base-templates/add-dependencies/: copier.yml  package.json  pyproject.toml
templates/base-templates/dapp-template/: README.md  copier.yml
templates/frontend-astro/: copier.yml
templates/frontend-example-1/: copier.yml
templates/frontend-react/: copier.yml
templates/smart-contract-example-hello-world/: copier.yml
templates/smart-contract-example-tictactoe/: copier.yml
templates/smart-contract-example-voting/: copier.yml
templates/vite-react-ts/: copier.yml
tests/: example2.test.ts  test_base.py
(+41 files in other folders)
