[tool.poetry]
name = "Python Smart Contract Example"
version = "0.1.0"
description = "Algorand smart contracts"
authors = [
    "Alyosha <john@example.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.4.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.1.0"
algorand-python-testing = "^0.4.0"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^1.1.3"
pytest = "*"
pytest-cov = "*"
puyapy = "*"

[tool.pytest.ini_options]
pythonpath = [
    "smart_contracts",
    "tests",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
